; ModuleID = '/home/carl/AnghaBench/openssl/crypto/rsa/extr_rsa_pmeth.c_pkey_rsa_ctrl_str.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/rsa/extr_rsa_pmeth.c_pkey_rsa_ctrl_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RSA_F_PKEY_RSA_CTRL_STR = common dso_local global i32 0, align 4
@RSA_R_VALUE_MISSING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"rsa_padding_mode\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"pkcs1\00", align 1
@RSA_PKCS1_PADDING = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [7 x i8] c"sslv23\00", align 1
@RSA_SSLV23_PADDING = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [5 x i8] c"none\00", align 1
@RSA_NO_PADDING = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [5 x i8] c"oeap\00", align 1
@RSA_PKCS1_OAEP_PADDING = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [5 x i8] c"oaep\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"x931\00", align 1
@RSA_X931_PADDING = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [4 x i8] c"pss\00", align 1
@RSA_PKCS1_PSS_PADDING = common dso_local global i32 0, align 4
@RSA_R_UNKNOWN_PADDING_TYPE = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [16 x i8] c"rsa_pss_saltlen\00", align 1
@.str.9 = private unnamed_addr constant [7 x i8] c"digest\00", align 1
@RSA_PSS_SALTLEN_DIGEST = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [4 x i8] c"max\00", align 1
@RSA_PSS_SALTLEN_MAX = common dso_local global i32 0, align 4
@.str.11 = private unnamed_addr constant [5 x i8] c"auto\00", align 1
@RSA_PSS_SALTLEN_AUTO = common dso_local global i32 0, align 4
@.str.12 = private unnamed_addr constant [16 x i8] c"rsa_keygen_bits\00", align 1
@.str.13 = private unnamed_addr constant [18 x i8] c"rsa_keygen_pubexp\00", align 1
@.str.14 = private unnamed_addr constant [18 x i8] c"rsa_keygen_primes\00", align 1
@.str.15 = private unnamed_addr constant [12 x i8] c"rsa_mgf1_md\00", align 1
@EVP_PKEY_OP_TYPE_SIG = common dso_local global i32 0, align 4
@EVP_PKEY_OP_TYPE_CRYPT = common dso_local global i32 0, align 4
@EVP_PKEY_CTRL_RSA_MGF1_MD = common dso_local global i32 0, align 4
@.str.16 = private unnamed_addr constant [23 x i8] c"rsa_pss_keygen_mgf1_md\00", align 1
@EVP_PKEY_OP_KEYGEN = common dso_local global i32 0, align 4
@.str.17 = private unnamed_addr constant [18 x i8] c"rsa_pss_keygen_md\00", align 1
@EVP_PKEY_CTRL_MD = common dso_local global i32 0, align 4
@.str.18 = private unnamed_addr constant [23 x i8] c"rsa_pss_keygen_saltlen\00", align 1
@.str.19 = private unnamed_addr constant [12 x i8] c"rsa_oaep_md\00", align 1
@EVP_PKEY_CTRL_RSA_OAEP_MD = common dso_local global i32 0, align 4
@.str.20 = private unnamed_addr constant [15 x i8] c"rsa_oaep_label\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*)* @pkey_rsa_ctrl_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pkey_rsa_ctrl_str(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i64, align 8
  %17 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %20, label %24

20:                                               ; preds = %3
  %21 = load i32, i32* @RSA_F_PKEY_RSA_CTRL_STR, align 4
  %22 = load i32, i32* @RSA_R_VALUE_MISSING, align 4
  %23 = call i32 @RSAerr(i32 %21, i32 %22)
  store i32 0, i32* %4, align 4
  br label %235

24:                                               ; preds = %3
  %25 = load i8*, i8** %6, align 8
  %26 = call i64 @strcmp(i8* %25, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %27 = icmp eq i64 %26, 0
  br i1 %27, label %28, label %84

28:                                               ; preds = %24
  %29 = load i8*, i8** %7, align 8
  %30 = call i64 @strcmp(i8* %29, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %31 = icmp eq i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %28
  %33 = load i32, i32* @RSA_PKCS1_PADDING, align 4
  store i32 %33, i32* %8, align 4
  br label %80

34:                                               ; preds = %28
  %35 = load i8*, i8** %7, align 8
  %36 = call i64 @strcmp(i8* %35, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %37 = icmp eq i64 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %34
  %39 = load i32, i32* @RSA_SSLV23_PADDING, align 4
  store i32 %39, i32* %8, align 4
  br label %79

40:                                               ; preds = %34
  %41 = load i8*, i8** %7, align 8
  %42 = call i64 @strcmp(i8* %41, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %43 = icmp eq i64 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %40
  %45 = load i32, i32* @RSA_NO_PADDING, align 4
  store i32 %45, i32* %8, align 4
  br label %78

46:                                               ; preds = %40
  %47 = load i8*, i8** %7, align 8
  %48 = call i64 @strcmp(i8* %47, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  %49 = icmp eq i64 %48, 0
  br i1 %49, label %50, label %52

50:                                               ; preds = %46
  %51 = load i32, i32* @RSA_PKCS1_OAEP_PADDING, align 4
  store i32 %51, i32* %8, align 4
  br label %77

52:                                               ; preds = %46
  %53 = load i8*, i8** %7, align 8
  %54 = call i64 @strcmp(i8* %53, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0))
  %55 = icmp eq i64 %54, 0
  br i1 %55, label %56, label %58

56:                                               ; preds = %52
  %57 = load i32, i32* @RSA_PKCS1_OAEP_PADDING, align 4
  store i32 %57, i32* %8, align 4
  br label %76

58:                                               ; preds = %52
  %59 = load i8*, i8** %7, align 8
  %60 = call i64 @strcmp(i8* %59, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0))
  %61 = icmp eq i64 %60, 0
  br i1 %61, label %62, label %64

62:                                               ; preds = %58
  %63 = load i32, i32* @RSA_X931_PADDING, align 4
  store i32 %63, i32* %8, align 4
  br label %75

64:                                               ; preds = %58
  %65 = load i8*, i8** %7, align 8
  %66 = call i64 @strcmp(i8* %65, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i64 0, i64 0))
  %67 = icmp eq i64 %66, 0
  br i1 %67, label %68, label %70

68:                                               ; preds = %64
  %69 = load i32, i32* @RSA_PKCS1_PSS_PADDING, align 4
  store i32 %69, i32* %8, align 4
  br label %74

70:                                               ; preds = %64
  %71 = load i32, i32* @RSA_F_PKEY_RSA_CTRL_STR, align 4
  %72 = load i32, i32* @RSA_R_UNKNOWN_PADDING_TYPE, align 4
  %73 = call i32 @RSAerr(i32 %71, i32 %72)
  store i32 -2, i32* %4, align 4
  br label %235

74:                                               ; preds = %68
  br label %75

75:                                               ; preds = %74, %62
  br label %76

76:                                               ; preds = %75, %56
  br label %77

77:                                               ; preds = %76, %50
  br label %78

78:                                               ; preds = %77, %44
  br label %79

79:                                               ; preds = %78, %38
  br label %80

80:                                               ; preds = %79, %32
  %81 = load i32*, i32** %5, align 8
  %82 = load i32, i32* %8, align 4
  %83 = call i32 @EVP_PKEY_CTX_set_rsa_padding(i32* %81, i32 %82)
  store i32 %83, i32* %4, align 4
  br label %235

84:                                               ; preds = %24
  %85 = load i8*, i8** %6, align 8
  %86 = call i64 @strcmp(i8* %85, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.8, i64 0, i64 0))
  %87 = icmp eq i64 %86, 0
  br i1 %87, label %88, label %115

88:                                               ; preds = %84
  %89 = load i8*, i8** %7, align 8
  %90 = call i64 @strcmp(i8* %89, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.9, i64 0, i64 0))
  %91 = icmp ne i64 %90, 0
  br i1 %91, label %94, label %92

92:                                               ; preds = %88
  %93 = load i32, i32* @RSA_PSS_SALTLEN_DIGEST, align 4
  store i32 %93, i32* %9, align 4
  br label %111

94:                                               ; preds = %88
  %95 = load i8*, i8** %7, align 8
  %96 = call i64 @strcmp(i8* %95, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i64 0, i64 0))
  %97 = icmp ne i64 %96, 0
  br i1 %97, label %100, label %98

98:                                               ; preds = %94
  %99 = load i32, i32* @RSA_PSS_SALTLEN_MAX, align 4
  store i32 %99, i32* %9, align 4
  br label %110

100:                                              ; preds = %94
  %101 = load i8*, i8** %7, align 8
  %102 = call i64 @strcmp(i8* %101, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.11, i64 0, i64 0))
  %103 = icmp ne i64 %102, 0
  br i1 %103, label %106, label %104

104:                                              ; preds = %100
  %105 = load i32, i32* @RSA_PSS_SALTLEN_AUTO, align 4
  store i32 %105, i32* %9, align 4
  br label %109

106:                                              ; preds = %100
  %107 = load i8*, i8** %7, align 8
  %108 = call i32 @atoi(i8* %107)
  store i32 %108, i32* %9, align 4
  br label %109

109:                                              ; preds = %106, %104
  br label %110

110:                                              ; preds = %109, %98
  br label %111

111:                                              ; preds = %110, %92
  %112 = load i32*, i32** %5, align 8
  %113 = load i32, i32* %9, align 4
  %114 = call i32 @EVP_PKEY_CTX_set_rsa_pss_saltlen(i32* %112, i32 %113)
  store i32 %114, i32* %4, align 4
  br label %235

115:                                              ; preds = %84
  %116 = load i8*, i8** %6, align 8
  %117 = call i64 @strcmp(i8* %116, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.12, i64 0, i64 0))
  %118 = icmp eq i64 %117, 0
  br i1 %118, label %119, label %125

119:                                              ; preds = %115
  %120 = load i8*, i8** %7, align 8
  %121 = call i32 @atoi(i8* %120)
  store i32 %121, i32* %10, align 4
  %122 = load i32*, i32** %5, align 8
  %123 = load i32, i32* %10, align 4
  %124 = call i32 @EVP_PKEY_CTX_set_rsa_keygen_bits(i32* %122, i32 %123)
  store i32 %124, i32* %4, align 4
  br label %235

125:                                              ; preds = %115
  %126 = load i8*, i8** %6, align 8
  %127 = call i64 @strcmp(i8* %126, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.13, i64 0, i64 0))
  %128 = icmp eq i64 %127, 0
  br i1 %128, label %129, label %145

129:                                              ; preds = %125
  store i32* null, i32** %12, align 8
  %130 = load i8*, i8** %7, align 8
  %131 = call i32 @BN_asc2bn(i32** %12, i8* %130)
  %132 = icmp ne i32 %131, 0
  br i1 %132, label %134, label %133

133:                                              ; preds = %129
  store i32 0, i32* %4, align 4
  br label %235

134:                                              ; preds = %129
  %135 = load i32*, i32** %5, align 8
  %136 = load i32*, i32** %12, align 8
  %137 = call i32 @EVP_PKEY_CTX_set_rsa_keygen_pubexp(i32* %135, i32* %136)
  store i32 %137, i32* %11, align 4
  %138 = load i32, i32* %11, align 4
  %139 = icmp sle i32 %138, 0
  br i1 %139, label %140, label %143

140:                                              ; preds = %134
  %141 = load i32*, i32** %12, align 8
  %142 = call i32 @BN_free(i32* %141)
  br label %143

143:                                              ; preds = %140, %134
  %144 = load i32, i32* %11, align 4
  store i32 %144, i32* %4, align 4
  br label %235

145:                                              ; preds = %125
  %146 = load i8*, i8** %6, align 8
  %147 = call i64 @strcmp(i8* %146, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.14, i64 0, i64 0))
  %148 = icmp eq i64 %147, 0
  br i1 %148, label %149, label %155

149:                                              ; preds = %145
  %150 = load i8*, i8** %7, align 8
  %151 = call i32 @atoi(i8* %150)
  store i32 %151, i32* %13, align 4
  %152 = load i32*, i32** %5, align 8
  %153 = load i32, i32* %13, align 4
  %154 = call i32 @EVP_PKEY_CTX_set_rsa_keygen_primes(i32* %152, i32 %153)
  store i32 %154, i32* %4, align 4
  br label %235

155:                                              ; preds = %145
  %156 = load i8*, i8** %6, align 8
  %157 = call i64 @strcmp(i8* %156, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.15, i64 0, i64 0))
  %158 = icmp eq i64 %157, 0
  br i1 %158, label %159, label %167

159:                                              ; preds = %155
  %160 = load i32*, i32** %5, align 8
  %161 = load i32, i32* @EVP_PKEY_OP_TYPE_SIG, align 4
  %162 = load i32, i32* @EVP_PKEY_OP_TYPE_CRYPT, align 4
  %163 = or i32 %161, %162
  %164 = load i32, i32* @EVP_PKEY_CTRL_RSA_MGF1_MD, align 4
  %165 = load i8*, i8** %7, align 8
  %166 = call i32 @EVP_PKEY_CTX_md(i32* %160, i32 %163, i32 %164, i8* %165)
  store i32 %166, i32* %4, align 4
  br label %235

167:                                              ; preds = %155
  %168 = load i32*, i32** %5, align 8
  %169 = call i64 @pkey_ctx_is_pss(i32* %168)
  %170 = icmp ne i64 %169, 0
  br i1 %170, label %171, label %202

171:                                              ; preds = %167
  %172 = load i8*, i8** %6, align 8
  %173 = call i64 @strcmp(i8* %172, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.16, i64 0, i64 0))
  %174 = icmp eq i64 %173, 0
  br i1 %174, label %175, label %181

175:                                              ; preds = %171
  %176 = load i32*, i32** %5, align 8
  %177 = load i32, i32* @EVP_PKEY_OP_KEYGEN, align 4
  %178 = load i32, i32* @EVP_PKEY_CTRL_RSA_MGF1_MD, align 4
  %179 = load i8*, i8** %7, align 8
  %180 = call i32 @EVP_PKEY_CTX_md(i32* %176, i32 %177, i32 %178, i8* %179)
  store i32 %180, i32* %4, align 4
  br label %235

181:                                              ; preds = %171
  %182 = load i8*, i8** %6, align 8
  %183 = call i64 @strcmp(i8* %182, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.17, i64 0, i64 0))
  %184 = icmp eq i64 %183, 0
  br i1 %184, label %185, label %191

185:                                              ; preds = %181
  %186 = load i32*, i32** %5, align 8
  %187 = load i32, i32* @EVP_PKEY_OP_KEYGEN, align 4
  %188 = load i32, i32* @EVP_PKEY_CTRL_MD, align 4
  %189 = load i8*, i8** %7, align 8
  %190 = call i32 @EVP_PKEY_CTX_md(i32* %186, i32 %187, i32 %188, i8* %189)
  store i32 %190, i32* %4, align 4
  br label %235

191:                                              ; preds = %181
  %192 = load i8*, i8** %6, align 8
  %193 = call i64 @strcmp(i8* %192, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.18, i64 0, i64 0))
  %194 = icmp eq i64 %193, 0
  br i1 %194, label %195, label %201

195:                                              ; preds = %191
  %196 = load i8*, i8** %7, align 8
  %197 = call i32 @atoi(i8* %196)
  store i32 %197, i32* %14, align 4
  %198 = load i32*, i32** %5, align 8
  %199 = load i32, i32* %14, align 4
  %200 = call i32 @EVP_PKEY_CTX_set_rsa_pss_keygen_saltlen(i32* %198, i32 %199)
  store i32 %200, i32* %4, align 4
  br label %235

201:                                              ; preds = %191
  br label %202

202:                                              ; preds = %201, %167
  %203 = load i8*, i8** %6, align 8
  %204 = call i64 @strcmp(i8* %203, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.19, i64 0, i64 0))
  %205 = icmp eq i64 %204, 0
  br i1 %205, label %206, label %212

206:                                              ; preds = %202
  %207 = load i32*, i32** %5, align 8
  %208 = load i32, i32* @EVP_PKEY_OP_TYPE_CRYPT, align 4
  %209 = load i32, i32* @EVP_PKEY_CTRL_RSA_OAEP_MD, align 4
  %210 = load i8*, i8** %7, align 8
  %211 = call i32 @EVP_PKEY_CTX_md(i32* %207, i32 %208, i32 %209, i8* %210)
  store i32 %211, i32* %4, align 4
  br label %235

212:                                              ; preds = %202
  %213 = load i8*, i8** %6, align 8
  %214 = call i64 @strcmp(i8* %213, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.20, i64 0, i64 0))
  %215 = icmp eq i64 %214, 0
  br i1 %215, label %216, label %234

216:                                              ; preds = %212
  %217 = load i8*, i8** %7, align 8
  %218 = call i8* @OPENSSL_hexstr2buf(i8* %217, i64* %16)
  store i8* %218, i8** %15, align 8
  %219 = load i8*, i8** %15, align 8
  %220 = icmp ne i8* %219, null
  br i1 %220, label %222, label %221

221:                                              ; preds = %216
  store i32 0, i32* %4, align 4
  br label %235

222:                                              ; preds = %216
  %223 = load i32*, i32** %5, align 8
  %224 = load i8*, i8** %15, align 8
  %225 = load i64, i64* %16, align 8
  %226 = call i32 @EVP_PKEY_CTX_set0_rsa_oaep_label(i32* %223, i8* %224, i64 %225)
  store i32 %226, i32* %17, align 4
  %227 = load i32, i32* %17, align 4
  %228 = icmp sle i32 %227, 0
  br i1 %228, label %229, label %232

229:                                              ; preds = %222
  %230 = load i8*, i8** %15, align 8
  %231 = call i32 @OPENSSL_free(i8* %230)
  br label %232

232:                                              ; preds = %229, %222
  %233 = load i32, i32* %17, align 4
  store i32 %233, i32* %4, align 4
  br label %235

234:                                              ; preds = %212
  store i32 -2, i32* %4, align 4
  br label %235

235:                                              ; preds = %234, %232, %221, %206, %195, %185, %175, %159, %149, %143, %133, %119, %111, %80, %70, %20
  %236 = load i32, i32* %4, align 4
  ret i32 %236
}

declare dso_local i32 @RSAerr(i32, i32) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @EVP_PKEY_CTX_set_rsa_padding(i32*, i32) #1

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @EVP_PKEY_CTX_set_rsa_pss_saltlen(i32*, i32) #1

declare dso_local i32 @EVP_PKEY_CTX_set_rsa_keygen_bits(i32*, i32) #1

declare dso_local i32 @BN_asc2bn(i32**, i8*) #1

declare dso_local i32 @EVP_PKEY_CTX_set_rsa_keygen_pubexp(i32*, i32*) #1

declare dso_local i32 @BN_free(i32*) #1

declare dso_local i32 @EVP_PKEY_CTX_set_rsa_keygen_primes(i32*, i32) #1

declare dso_local i32 @EVP_PKEY_CTX_md(i32*, i32, i32, i8*) #1

declare dso_local i64 @pkey_ctx_is_pss(i32*) #1

declare dso_local i32 @EVP_PKEY_CTX_set_rsa_pss_keygen_saltlen(i32*, i32) #1

declare dso_local i8* @OPENSSL_hexstr2buf(i8*, i64*) #1

declare dso_local i32 @EVP_PKEY_CTX_set0_rsa_oaep_label(i32*, i8*, i64) #1

declare dso_local i32 @OPENSSL_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
